--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -63,7 +63,18 @@
 
 .countdownButtonActive {
   background-color: var(--white);
-  color: var(--title);
+  color: var(--text);
+}
+
+.countdownButtonActive::before {
+  content: '';
+  position: relative;
+  overflow: hidden;
+  background-color: red;
+  height: 0.25rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column-reverse ;
 }
 
 .countdownButtonActive:not(:disabled):hover {
