--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -1,18 +1,141 @@
 .container {
+  background-color: var(--blue);
   height: 100vh;
-  max-width: 992px;
-  margin: auto;
-  padding: 2.5rem 2rem;
+  width: 100vw;
+  display: flex;
+  flex-direction: row-reverse;
 
+  background-image: url('/watter-mark.png');
+  background-repeat: no-repeat;
+  background-position: 0 center;
+}
+
+.containerForm {
+  margin-right: 20rem;
+  max-width: 600px;
+  /* background-color: black; */
+  
+  justify-content: center;
+  align-items: center;
+  
   display: flex;
   flex-direction: column;
 }
 
-.container section {
-  flex: 1;
+.containerForm header {
+  margin-bottom: 6rem;
+  width: 100%;
+}
 
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 6.25rem;
-  align-content: center;
+.containerForm header img {
+  height: 6rem;
+}
+
+.containerForm > div {
+  width: 100%;
+}
+
+.containerForm > div > p {
+  margin-bottom: 1.5rem;
+}
+
+.containerForm > div > p {
+  color: var(--white);
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 3rem;
+  text-align: left;
+}
+
+.instructions {
+  display: flex;
+  padding: 0 1rem 0 0;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.instructions p {
+  color: var(--text-highlight);
+  
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+
+  max-width: 300px;
+  margin-left: 2rem;
+}
+
+.inputUsername {
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  align-items: flex-start;
+}
+
+.inputUsername input {
+  height: 100%;
+  width: calc(100% - 5rem);
+  
+  border: 3px solid transparent;
+  outline: none;
+  border-radius: 5px 0 0 5px;
+
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+  
+  font-size: 1.5rem;
+
+  color: var(--white);
+  
+  /* padding-left: 1.5rem; */
+  text-indent: 2rem;
+
+  background: linear-gradient(to right, var(--blue-dark), rgba(73, 83, 183, 0.2));
+}
+
+.inputUsername input:focus, .inputUsername input:hover {
+  border-color: #414AA3;
+}
+
+.inputUsername input::placeholder {
+  color: var(--text-highlight);
+}
+
+.inputUsername button {
+  height: 5rem;
+  width: 5rem;
+
+  font-size: 0;
+  
+  border: none;
+  border-radius: 0 5px 5px 0;
+  
+  background-color: var(--blue-dark);
+}
+
+.inputUsername button[disabled] {
+  cursor: not-allowed;
+}
+
+.activeButton {
+  background-color: var(--green) !important;
+}
+
+@media(max-width: 1080px) {
+  .containerForm {
+    margin-right: 7.5rem;
+  }
+}
+
+@media(max-width: 768px) {
+  .containerForm {
+    margin-right: 10rem;
+  }
+}
+
+@media(max-width: 320px) {
+  .containerForm {
+    margin-right: 0rem;
+    width: 100%;
+  }
 }
